--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Expanding Cards</title>
   </head>
   <body>
-    <h1>VELKOMMEN!</h1>
+    <main class="imagesBox">
+      <div class="image image--active">
+        <img src="" alt="" />
+      </div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+    </main>
   </body>
 </html>
