--- a/index.html
+++ b/index.html
@@ -9,14 +9,25 @@
     <title>Expanding Cards</title>
   </head>
   <body>
-    <main class="imagesBox">
-      <div class="image image--active">
-        <img src="" alt="" />
+    <main class="panelContainer">
+      <div
+        class="panel panel--active"
+        style="background-image: url('images/img1.jpg')"
+      >
+        <h4>Picture 1</h4>
       </div>
-      <div class="image"></div>
-      <div class="image"></div>
-      <div class="image"></div>
-      <div class="image"></div>
+      <div class="panel" style="background-image: url('images/img2.jpg')">
+        <h4>Picture 2</h4>
+      </div>
+      <div class="panel" style="background-image: url('images/img3.jpg')">
+        <h4>Picture 3</h4>
+      </div>
+      <div class="panel" style="background-image: url('images/img4.jpg')">
+        <h4>Picture 4</h4>
+      </div>
+      <div class="panel" style="background-image: url('images/img5.jpg')">
+        <h4>Picture 5</h4>
+      </div>
     </main>
   </body>
 </html>
