--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
   </head>
   <body>
     <main class="panelContainer">
-      <div
-        class="panel panel--active"
-        style="background-image: url('images/img1.jpg')"
-      >
+      <div class="panel" style="background-image: url('images/img1.jpg')">
         <h4>Picture 1</h4>
       </div>
       <div class="panel" style="background-image: url('images/img2.jpg')">
