--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
   <body>
     <main class="panelContainer">
       <div class="panel" style="background-image: url('images/img1.jpg')">
-        <h4>Picture 1</h4>
+        <h4 class="hidden">Tokyo</h4>
       </div>
       <div class="panel" style="background-image: url('images/img2.jpg')">
-        <h4>Picture 2</h4>
+        <h4 class="hidden">Tokyo</h4>
       </div>
       <div class="panel" style="background-image: url('images/img3.jpg')">
-        <h4>Picture 3</h4>
+        <h4 class="hidden"></h4>
       </div>
       <div class="panel" style="background-image: url('images/img4.jpg')">
-        <h4>Picture 4</h4>
+        <h4 class="hidden" style="color: white">Shrine</h4>
       </div>
       <div class="panel" style="background-image: url('images/img5.jpg')">
-        <h4>Picture 5</h4>
+        <h4 class="hidden" style="color: white">Mt. Fuji</h4>
       </div>
     </main>
   </body>
